added the deployment workflow

--- a/jupyter-notebook/sba_loan_preprocessing.ipynb
+++ b/jupyter-notebook/sba_loan_preprocessing.ipynb
@@ -39,7 +39,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 1,
             "id": "setup",
             "metadata": {},
             "outputs": [
@@ -78,7 +78,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "id": "load_data",
             "metadata": {},
             "outputs": [
@@ -103,7 +103,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 3,
             "id": "preview_data",
             "metadata": {},
             "outputs": [
@@ -508,7 +508,7 @@
                             "4             Y                 NaN  "
                         ]
                     },
-                    "execution_count": 14,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -528,7 +528,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 4,
             "id": "data_quality",
             "metadata": {},
             "outputs": [
@@ -598,7 +598,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 5,
             "id": "target_exploration",
             "metadata": {},
             "outputs": [
@@ -632,7 +632,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 6,
             "id": "filter_target",
             "metadata": {},
             "outputs": [
@@ -663,7 +663,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 7,
             "id": "check_missing_after_filter",
             "metadata": {},
             "outputs": [
@@ -720,7 +720,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 10,
             "id": "drop_disbursement_nulls",
             "metadata": {},
             "outputs": [
@@ -729,8 +729,8 @@
                     "output_type": "stream",
                     "text": [
                         "[5.1] Dropping rows with missing FirstDisbursementDate...\n",
-                        "Missing FirstDisbursementDate: 3\n",
-                        "Rows dropped: 3\n"
+                        "Missing FirstDisbursementDate: 0\n",
+                        "Rows dropped: 0\n"
                     ]
                 }
             ],
@@ -747,7 +747,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 11,
             "id": "drop_identifiers",
             "metadata": {},
             "outputs": [
@@ -771,7 +771,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 106,
             "id": "clean_business_type",
             "metadata": {},
             "outputs": [
@@ -803,7 +803,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 107,
             "id": "clean_business_age",
             "metadata": {},
             "outputs": [
@@ -854,7 +854,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 108,
             "id": "missing_summary",
             "metadata": {},
             "outputs": [
@@ -885,7 +885,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 109,
             "id": "fe_dates",
             "metadata": {},
             "outputs": [
@@ -908,7 +908,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 110,
             "id": "fe_time",
             "metadata": {},
             "outputs": [
@@ -940,7 +940,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 111,
             "id": "fe_covid",
             "metadata": {},
             "outputs": [
@@ -965,7 +965,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 112,
             "id": "fe_term",
             "metadata": {},
             "outputs": [
@@ -987,7 +987,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 113,
             "id": "fe_naics",
             "metadata": {},
             "outputs": [
@@ -1009,7 +1009,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 114,
             "id": "fe_binary",
             "metadata": {},
             "outputs": [
@@ -1054,7 +1054,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 115,
             "id": "fe_interaction",
             "metadata": {},
             "outputs": [
@@ -1079,7 +1079,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": 116,
             "id": "fe_frequency",
             "metadata": {},
             "outputs": [
@@ -1102,7 +1102,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 32,
+            "execution_count": 117,
             "id": "fe_complete",
             "metadata": {},
             "outputs": [
@@ -1133,7 +1133,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 33,
+            "execution_count": 118,
             "id": "encode_business",
             "metadata": {},
             "outputs": [
@@ -1167,7 +1167,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 34,
+            "execution_count": 119,
             "id": "encode_state",
             "metadata": {},
             "outputs": [
@@ -1201,7 +1201,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 120,
             "id": "encode_complete",
             "metadata": {},
             "outputs": [
@@ -1233,7 +1233,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 121,
             "id": "drop_all",
             "metadata": {},
             "outputs": [
@@ -1289,7 +1289,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 122,
             "id": "create_target",
             "metadata": {},
             "outputs": [
@@ -1319,8 +1319,38 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "id": "2602224a",
+            "metadata": {},
+            "source": [
+                "# Made some changes here"
+            ]
+        },
+        {
             "cell_type": "code",
-            "execution_count": 38,
+            "execution_count": 123,
+            "id": "f7049878",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "#need to drop\n",
+                "#df['LoanStatus'] = df['LoanStatus'].map({'PIF': 0, 'CHGOFF': 1})"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 124,
+            "id": "031267d4",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "#need to drop\n",
+                "#df.to_csv('../data/feature/sba_loan_preprocessed.csv', index=False)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 125,
             "id": "verify_quality",
             "metadata": {},
             "outputs": [
@@ -1345,7 +1375,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 39,
+            "execution_count": 126,
             "id": "final_summary",
             "metadata": {},
             "outputs": [
@@ -1457,7 +1487,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 40,
+            "execution_count": 127,
             "id": "completion",
             "metadata": {},
             "outputs": [
@@ -1495,7 +1525,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 43,
+            "execution_count": 128,
             "id": "save_data",
             "metadata": {},
             "outputs": [
@@ -1520,11 +1550,62 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
-            "id": "b90dfb54",
+            "execution_count": 13,
+            "id": "3633c949",
             "metadata": {},
             "outputs": [],
-            "source": []
+            "source": [
+                "import pandas as pd\n",
+                "df= pd.read_csv(\"../data/feature/sba_loan_preprocessed.csv\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "id": "58d5b6e0",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "Index(['GrossApproval', 'SBAGuaranteedApproval', 'ApprovalFY',\n",
+                            "       'InitialInterestRate', 'LoanStatus', 'RevolverStatus', 'JobsSupported',\n",
+                            "       'TimeToDisbursementDays', 'DaysSinceApproval', 'IsCovidEra',\n",
+                            "       'TermInYears', 'NAICSSector', 'IsCreditUnion', 'IsFranchise',\n",
+                            "       'IsFixedRate', 'HasCollateral', 'SoldSecondaryMarket',\n",
+                            "       'SameStateLending', 'LocationIDCount', 'Type_CORPORATION',\n",
+                            "       'Type_INDIVIDUAL', 'Type_PARTNERSHIP', 'Age_ChangeOfOwnership',\n",
+                            "       'Age_Existing', 'Age_NewBusiness', 'Age_Startup', 'State_AK',\n",
+                            "       'State_AL', 'State_AR', 'State_AZ', 'State_CA', 'State_CO', 'State_CT',\n",
+                            "       'State_DC', 'State_DE', 'State_FL', 'State_GA', 'State_GU', 'State_HI',\n",
+                            "       'State_IA', 'State_ID', 'State_IL', 'State_IN', 'State_KS', 'State_KY',\n",
+                            "       'State_LA', 'State_MA', 'State_MD', 'State_ME', 'State_MI', 'State_MN',\n",
+                            "       'State_MO', 'State_MS', 'State_MT', 'State_NC', 'State_ND', 'State_NE',\n",
+                            "       'State_NH', 'State_NJ', 'State_NM', 'State_NV', 'State_NY', 'State_OH',\n",
+                            "       'State_OK', 'State_OR', 'State_PA', 'State_PR', 'State_RI', 'State_SC',\n",
+                            "       'State_SD', 'State_TN', 'State_TX', 'State_UT', 'State_VA', 'State_VI',\n",
+                            "       'State_VT', 'State_WA', 'State_WI', 'State_WV', 'State_WY'],\n",
+                            "      dtype='object')"
+                        ]
+                    },
+                    "execution_count": 16,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df.columns"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "877e5109",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "GrossApproval, SBAGuaranteedApproval, ApprovalFY, InitialInterestRate, RevolverStatus, JobsSupported, NAICSSector, IsFixedRate, HasCollateral, SameStateLending, LocationIDCount, BUSiness_Type, Business_Age, IsCreditUnion, IsFranchise, IsCovidEra,  "
+            ]
         }
     ],
     "metadata": {
